Added css style for components

--- a/FeedbackAnalysisAI.Portal/src/app/sign-in/sign-in.component.html
+++ b/FeedbackAnalysisAI.Portal/src/app/sign-in/sign-in.component.html
@@ -1,6 +1,6 @@
-<form (ngSubmit)="onSubmit()">
-  <input type="text" name="username" [(ngModel)]="userLoginModel.username" placeholder="UserName">
-  <input type="password" name="password" [(ngModel)]="userLoginModel.password" placeholder="Password">
-  <button type="submit">SignIn</button>
+<form class="login-form" (ngSubmit)="onSubmit()">
+  <input type="text" name="username" [(ngModel)]="userLoginModel.username" placeholder="Username" required>
+  <input type="password" name="password" [(ngModel)]="userLoginModel.password" placeholder="Password" required>
+  <button type="submit">Sign In</button>
 </form>
 <div *ngIf="errorText" class="error-message">{{ errorText }}</div>
